<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_color_white_corner16_top_left"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btn_item_save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_blue009_save_alt_24"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:text="@string/title_save" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_item_title"
        android:text="@string/title_title"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/edt_item_title"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/edt_item_title"
            android:text="@string/title_notify"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch_notify"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_item_title"
        android:text="@string/w_msg_notify"
        android:textSize="15sp"
        android:textStyle="italic" />

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
           android:text="@string/title_timer"
            android:layout_weight="1"
            style="?android:spinnerStyle"
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
           android:text="@string/title_date"
            android:layout_weight="1"
            style="?android:spinnerStyle"
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>