<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_corner16"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_create_new_password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_enter_new_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_enterpasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_white_corner16_stroke_gray"
        android:gravity="center"

        android:inputType="numberPassword"
        android:maxLength="6"
        android:padding="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_re_enter_new_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_re_enterpasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_white_corner16_stroke_gray"
        android:gravity="center"

        android:inputType="numberPassword"
        android:maxLength="6"
        android:padding="20dp" />

    <Button
        android:id="@+id/btn_accept"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green_corner16"
        android:padding="10dp"
        android:text="@string/title_confirm" />

</LinearLayout>