<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"

    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đây là tiêu đề"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đây là tổng số tiền"
            android:textSize="20sp" />
        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hạn tất toán: "
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30/10/1999"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button

                android:id="@+id/temp_pay"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_blue_corner16"
                android:drawableLeft="@drawable/ic_yellow_payments_24"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:text="@string/title_temp_pay" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_green_corner16"
                android:drawableLeft="@drawable/ic_green_edit_24"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:text="@string/title_edit" />

            <Button
                android:id="@+id/btn_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_red_corner16"
                android:drawableLeft="@drawable/ic_red_delete_outline_24"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:text="@string/title_delete"


                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>